# Homework_linux

./: CMakeLists.txt  Doxyfile  Events.h  LICENSE  account.cpp  account.h  anime.cpp  anime.h  concatenate.h  data_preparations.cpp  data_preparations.h  defines.h  display_grid.h  format.h  homework_5.doc  homework_7.doc  main.cpp  nicknamegen.h  preparation_parameters.h  randomname.cpp  randomname.h  sha256.cpp  sha256.h  tie.h  user.cpp  user.h  write_file.cpp  write_file.h  Отчет Тонка игра жизнь.docx
data/: list_of_shells.txt  names_0.txt
html/: _events_8h.html  _events_8h.js  _events_8h__dep__incl.map  _events_8h__incl.map  _events_8h_a192c609e0c44e59c790bbe67c3208c22_cgraph.map  _events_8h_a192c609e0c44e59c790bbe67c3208c22_cgraph.md5  _events_8h_a192c609e0c44e59c790bbe67c3208c22_icgraph.map  _events_8h_a192c609e0c44e59c790bbe67c3208c22_icgraph.md5  _events_8h_source.html  defines_8h.html  defines_8h.js  defines_8h__dep__incl.map  defines_8h__dep__incl.md5  defines_8h__incl.map  defines_8h_source.html  display__grid_8h.html  display__grid_8h.js  display__grid_8h__dep__incl.map  display__grid_8h__incl.map  display__grid_8h__incl.md5  display__grid_8h_a27f7f22ead830e5c5538ec7cbc429758_cgraph.map  display__grid_8h_a27f7f22ead830e5c5538ec7cbc429758_cgraph.md5  display__grid_8h_a27f7f22ead830e5c5538ec7cbc429758_icgraph.map  display__grid_8h_source.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  navtreedata.js  navtreeindex0.js  preparation__parameters_8h.html  preparation__parameters_8h.js  preparation__parameters_8h__dep__incl.map  (+9 more)
latex/: _events_8h.tex  _events_8h__dep__incl.md5  _events_8h__incl.md5  _events_8h_source.tex  (+14 more)
(+21 files in other folders)
